...
        ),
        backgroundColor: Theme.of(context).scaffoldBackgroundColor,

        // закрыть и сохранить
        actions: [
          TextButton(
              key: const Key('TextButtonSave'),
              onPressed: () {
                final todo = Todo(
                    uuid: widget.uuid,
                    title: _controller.text,
                    importance: _importance,
                    deadline: _deadline,
...
